--- a/ENGIE_App/App.xaml
+++ b/ENGIE_App/App.xaml
@@ -13,6 +13,12 @@
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <BoxView BackgroundColor="White" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="5"/>
+                    <Label Text="{TemplateBinding Title}"
+                           Grid.Column="1"
+                           FontSize="Large"
+                           VerticalTextAlignment="Center"
+                           TextColor="#00a9ff"
+                           Grid.ColumnSpan="4"></Label>
                     <ImageButton Source="hamburger.png"
                             Grid.Column="0"
                             HorizontalOptions="Center"
@@ -20,13 +26,10 @@
                             BorderColor="Transparent"
                             BackgroundColor="Transparent"
                             Clicked="Expand"/>
-
-                    <Image Source="engielogo.png"
-                        HorizontalOptions="Center"
-                        Grid.Column="2"/>
                     <ContentPresenter VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"/>
                 </Grid>
             </ControlTemplate>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
