--- a/ENGIE_App/views/HelpPage.xaml
+++ b/ENGIE_App/views/HelpPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.HelpPage"
              BackgroundColor="White"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             ControlTemplate="{StaticResource MainPageTemplate}"
+             Title="Help">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Help Page"
