--- a/ENGIE_App/views/LoginPage.xaml
+++ b/ENGIE_App/views/LoginPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.LoginPage"
              BackgroundColor="White"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             ControlTemplate="{StaticResource MainPageTemplate}"
+             Title="Welcome">
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
