--- a/ENGIE_App/views/RecentlySubmitted.xaml
+++ b/ENGIE_App/views/RecentlySubmitted.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.RecentlySubmitted"
              BackgroundColor="White"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             ControlTemplate="{StaticResource MainPageTemplate}"
+             Title="Recently Submitted Forms">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Recently Submitted Page"
