--- a/ENGIE_App/views/ScanPage.xaml
+++ b/ENGIE_App/views/ScanPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.ScanPage"
              BackgroundColor="White"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             ControlTemplate="{StaticResource MainPageTemplate}"
+             Title="Scan Asset">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Scan Page"
