--- a/ENGIE_App/App.xaml
+++ b/ENGIE_App/App.xaml
@@ -19,13 +19,16 @@
                            VerticalTextAlignment="Center"
                            TextColor="#00a9ff"
                            Grid.ColumnSpan="4"></Label>
-                    <ImageButton Source="hamburger.png"
+                    <Button AutomationId="MenuButton"
                             Grid.Column="0"
                             HorizontalOptions="Center"
                             VerticalOptions="CenterAndExpand"
                             BorderColor="Transparent"
                             BackgroundColor="Transparent"
                             Clicked="Expand"/>
+                    <Image Source="hamburger.png"
+                           InputTransparent="True"
+                           />
                     <ContentPresenter VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" Grid.Column="0" Grid.Row="1" Grid.ColumnSpan="5"/>
                 </Grid>
             </ControlTemplate>
