Started adding test for navigating to scan page - but ran into problem with properly identifying page so:
Added AutomationIDs to each page.xaml in ENGIE_App.views so that tests can identify which page they are on.

--- a/ENGIE_App/views/HelpPage.xaml
+++ b/ENGIE_App/views/HelpPage.xaml
@@ -4,7 +4,8 @@
              x:Class="ENGIE_App.views.HelpPage"
              BackgroundColor="White"
              ControlTemplate="{StaticResource MainPageTemplate}"
-             Title="Help">
+             Title="Help"
+             AutomationId="HelpPage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Help Page"
