--- a/ENGIE_App/views/FormPage.xaml
+++ b/ENGIE_App/views/FormPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.FormPage"
              BackgroundColor="White"
-             ControlTemplate="{StaticResource MainPageTemplate}">
+             ControlTemplate="{StaticResource MainPageTemplate}"
+             AutomationId="FormPage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Form Page"
