--- a/ENGIE_App/views/LoginPage.xaml
+++ b/ENGIE_App/views/LoginPage.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ENGIE_App.views.LoginPage"
              BackgroundColor="#009fe3"
-             Title="Welcome">
+             Title="Welcome"
+             AutomationId="LoginPage">
     <!--ControlTemplate="{StaticResource MainPageTemplate}"-->
     <ContentPage.Content>
         <ScrollView>
