--- a/ENGIE_App/views/RecentlySubmitted.xaml
+++ b/ENGIE_App/views/RecentlySubmitted.xaml
@@ -4,7 +4,8 @@
              x:Class="ENGIE_App.views.RecentlySubmitted"
              BackgroundColor="White"
              ControlTemplate="{StaticResource MainPageTemplate}"
-             Title="Recently Submitted Forms">
+             Title="Recently Submitted Forms"
+             AutomationId="RecentPage">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Recently Submitted Page"
