--- a/ENGIE_App/views/ScanPage.xaml
+++ b/ENGIE_App/views/ScanPage.xaml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
              x:Class="ENGIE_App.views.ScanPage"
              BackgroundColor="White"
              ControlTemplate="{StaticResource MainPageTemplate}"
@@ -10,6 +11,9 @@
         <StackLayout>
             <Label Text="Scan Page"
                    TextColor="Black"/>
+            <Label x:Name="scanResultText"/>
+            <zxing:ZXingScannerView IsScanning="True"
+                                    OnScanResult="ZXingScannerView_OnScanResult"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
