--- a/ENGIE_App/views/LoginPage.xaml
+++ b/ENGIE_App/views/LoginPage.xaml
@@ -10,7 +10,7 @@
         <ScrollView>
             <StackLayout>
                 <!--I'll move this button later -Tom -->
-                <Button Text="Admin"/>
+                <Button Text="Admin" Clicked="Admin_Clicked"/>
                 <Grid Margin="20,0,20,0" VerticalOptions="CenterAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
