--- a/ENGIE_App/views/ScanPage.xaml
+++ b/ENGIE_App/views/ScanPage.xaml
@@ -11,10 +11,13 @@
         <AbsoluteLayout>
             <zxing:ZXingScannerView IsScanning="True"
                                     OnScanResult="ZXingScannerView_OnScanResult"/>
-            <Label x:Name="scanResultText"/>
+            <Label x:Name="scanResultText"
+                   TextColor="White"/>
             <Image Source="crosshair"
-                   HeightRequest="100"
-                   WidthRequest="100"/>
+                   HeightRequest="150"
+                   WidthRequest="150"
+                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                   AbsoluteLayout.LayoutBounds="0.5, 0.4, 150, 150"/>
         </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
