--- a/ENGIE_App/views/AdminOptionsPage.xaml
+++ b/ENGIE_App/views/AdminOptionsPage.xaml
@@ -64,6 +64,24 @@
                        BackgroundColor="#444"
                        BorderColor="Transparent">
                 </Frame>
+
+                <Frame Padding="25, 0, 25, 0"
+                           CornerRadius="25"
+                           BackgroundColor="White"
+                           Grid.Row="2">
+                    <Entry Placeholder="Text" FontSize="16" x:Name="EntryQRText"/>
+                </Frame>
+
+                <StackLayout Grid.Row="3" Padding="0, 10, 0, 0">
+                    <Button Text="Create QR" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="GenerateQR" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                </StackLayout>
+                <ScrollView>
+                    <!-- x:Name="ConvertedImage" />-->
+                    <Label x:Name="QRLabel"
+                           LineBreakMode="NoWrap"
+                           FontSize="Micro"/> 
+                </ScrollView>
+                
             </StackLayout>
             
         </StackLayout>
