QR code is now converted from ascii to png and emailed to user

--- a/ENGIE_App/views/AdminOptionsPage.xaml
+++ b/ENGIE_App/views/AdminOptionsPage.xaml
@@ -79,7 +79,8 @@
                     <!-- x:Name="ConvertedImage" />-->
                     <Label x:Name="QRLabel"
                            LineBreakMode="NoWrap"
-                           FontSize="Micro"/> 
+                           FontSize="Micro"/>
+                    <Image x:Name="QRImage"/>
                 </ScrollView>
                 
             </StackLayout>
