can now set email and send standard email, realtime validation also implemented on admin options

--- a/ENGIE_App/views/AdminOptionsPage.xaml
+++ b/ENGIE_App/views/AdminOptionsPage.xaml
@@ -7,6 +7,37 @@
              AutomationId="AdminOptionsPage">
     <ContentPage.Content>
         <StackLayout>
+            <StackLayout Margin="20,30,20,0">
+                <Label Text="Location to send PDF forms"
+                       TextColor="Black"
+                       FontFamily="{StaticResource NormalFont}"
+                       FontSize="Medium"
+                       HorizontalTextAlignment="Center"
+                       Margin="0, 0, 0, 10"/>
+
+                <!--This is an underline for the text similar to the <hr> tag in html-->
+                <Frame HeightRequest="2"
+                       MinimumHeightRequest="1"
+                       Padding="0, 0, 0, 0"
+                       BackgroundColor="#444"
+                       BorderColor="Transparent">
+                </Frame>
+                <Frame Padding="25, 0, 25, 0"
+                           CornerRadius="25"
+                           BackgroundColor="White"
+                           Grid.Row="1">
+                    <Entry Placeholder="Email" Keyboard="Email" TextChanged="ValidateEmail" FontSize="16" x:Name="EntryDesEmail"/>
+                </Frame>
+                
+                <StackLayout Padding="0, 10, 0, 0">
+                    <Button Text="Set  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Set_Email" IsEnabled="False" x:Name="setEmailBtn" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                </StackLayout>
+                <StackLayout Padding="0, 10, 0, 0">
+                    <Button Text="Send  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Send_Email" IsEnabled="False" x:Name="sendEmailBtn" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                </StackLayout>
+            
+            </StackLayout>
+            
             <Grid Margin="20,0,20,0" VerticalOptions="Start">
 
                 <Grid.RowDefinitions>
