--- a/ENGIE_App/views/AdminOptionsPage.xaml
+++ b/ENGIE_App/views/AdminOptionsPage.xaml
@@ -6,8 +6,10 @@
              Title="Admin"
              AutomationId="AdminOptionsPage">
     <ContentPage.Content>
+        <ScrollView>
         <StackLayout>
-            <StackLayout Margin="20,30,20,0">
+            
+            <StackLayout Margin="20,0,20,0">
                 <Label Text="Location to send PDF forms"
                        TextColor="Black"
                        FontFamily="{StaticResource NormalFont}"
@@ -30,15 +32,15 @@
                 </Frame>
                 
                 <StackLayout Padding="0, 10, 0, 0">
-                    <Button Text="Set  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Set_Email" IsEnabled="False" x:Name="setEmailBtn" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                        <Button Text="Set  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Set_Email" IsEnabled="False" x:Name="setEmailBtn" Padding="120, 20, 120, 20" CornerRadius="10"/>
                 </StackLayout>
                 <StackLayout Padding="0, 10, 0, 0">
-                    <Button Text="Send  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Send_Email" IsEnabled="False" x:Name="sendEmailBtn" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                        <Button Text="Send  Email" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Send_Email" IsEnabled="False" x:Name="sendEmailBtn" Padding="115, 20, 115, 20" CornerRadius="10"/>
                 </StackLayout>
             
             </StackLayout>
             
-            <Grid Margin="20,0,20,0" VerticalOptions="Start">
+            <Grid Margin="20,30,20,0" VerticalOptions="Start">
 
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -108,7 +110,7 @@
                 </Picker>
 
                 <StackLayout Grid.Row="3" Padding="0, 10, 0, 0">
-                    <Button Text="Create QR" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="GenerateQR" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                    <Button Text="Create QR" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="GenerateQR" Padding="120, 20, 120, 20" CornerRadius="10"/>
                 </StackLayout>
                 <ScrollView>
                     <!-- x:Name="ConvertedImage" />-->
@@ -120,5 +122,6 @@
             </StackLayout>
             
         </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
