--- a/ENGIE_App/views/AdminOptionsPage.xaml
+++ b/ENGIE_App/views/AdminOptionsPage.xaml
@@ -79,7 +79,7 @@
                 </Frame>
 
                 <StackLayout Grid.Row="3" Padding="0, 10, 0, 0">
-                    <Button Text="Register" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="Button_Clicked" Padding="125, 20, 125, 20" CornerRadius="10"/>
+                    <Button Text="Register" HorizontalOptions="CenterAndExpand" TextColor="#FFF" BackgroundColor="#009fe3" Clicked="CreateAdmin" Padding="125, 20, 125, 20" CornerRadius="10"/>
                 </StackLayout>
             </Grid>
             <StackLayout Margin="20,30,20,0">
