--- a/ENGIE_App/views/HelpPage.xaml
+++ b/ENGIE_App/views/HelpPage.xaml
@@ -7,23 +7,63 @@
              Title="Help"
              AutomationId="HelpPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label
-                x:Name="HelpPageMainText"
+        <ScrollView>
+            <StackLayout>
+                <Label
+                 x:Name="HelpPageHeading1"
+                 FontSize="Medium"
+                TextColor="#444"
+                FontFamily="{StaticResource NormalFont}">
+                    Welcome to the help page, here you will find:
+                </Label>
+                <Label
+                x:Name="HelpPagePara1"
                 FontSize="Small"
                 TextColor="#444"
                 FontFamily="{StaticResource NormalFont}"
-                Padding="30">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris sit amet tellus ut lectus lobortis posuere ut eget orci. Maecenas a elementum neque, sed posuere justo. Donec ullamcorper velit vel elit congue tincidunt. Fusce volutpat sapien eros, non condimentum purus efficitur id. Morbi sollicitudin vehicula facilisis. Cras ut justo dapibus, ultricies lorem rhoncus, tincidunt tellus. Sed odio arcu, congue vitae elementum ut, hendrerit at massa. Phasellus eleifend leo at orci varius sollicitudin. Fusce pharetra mattis pellentesque. Sed aliquam dui ut velit aliquet, id placerat orci luctus. Phasellus cursus non velit fringilla laoreet.
-            </Label>
-            <ScrollView>
-                <Grid x:Name="HelpGrid" Padding="10, 0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="1*" />
-                        <ColumnDefinition Width="1*" />
-                    </Grid.ColumnDefinitions>
-                </Grid>
-            </ScrollView>
-        </StackLayout>
+                Padding="30"
+                Text="•Advice for using QR scanner&#10;•Tutorial: how to scan an asset QR code and submit a form&#10;•Video tutorials&#10;">
+                </Label>
+
+                <Label
+                 x:Name="HelpPageHeading2"
+                 FontSize="Medium"
+                TextColor="#444"
+                FontFamily="{StaticResource NormalFont}">
+                    Advice for using QR scanner
+                </Label>
+                <Label
+                x:Name="HelpPagePara2"
+                FontSize="Small"
+                TextColor="#444"
+                FontFamily="{StaticResource NormalFont}"
+                Padding="30"
+                Text="•Try to position the QR code in the centre of your screen&#10;•Try to position the QR code in the centre of your screen&#10;•Start with your phone closer to the QR code, and slowly move it away from the QR code until it scans&#10;•Watch the first tutorial video below for an example&#10;">
+                </Label>
+
+                <Label
+                 x:Name="HelpPageHeading3"
+                 FontSize="Medium"
+                TextColor="#444"
+                FontFamily="{StaticResource NormalFont}">
+                    Tutorial: how to scan an asset QR code and submit a form
+                </Label>
+                <Label
+                x:Name="HelpPagePara3"
+                FontSize="Small"
+                TextColor="#444"
+                FontFamily="{StaticResource NormalFont}"
+                Padding="30"
+                Text="•See tutorial videos below for accompanying video&#10;1) Open the menu ☰ and press 'Scan Asset'.  If asked, please allow the application to access your camera - otherwise it cannot scan the codes.&#10;2) Scan the QR code by positioning it in the centre of your screen.  Some tips can be found in the help section 'Advice for using QR scanner'&#10;3) Once scanned, a form will appear with boxes you can type in.  Fill in the boxes and then press the submit button at the bottom.&#10;4) When prompted, allow the application access to storage so the form can be saved.&#10;5) The information you entered is then sent via email.&#10;6) You can see forms you've submitted in the 'Recently Submitted Forms' page.&#10;">
+                </Label>
+                <ScrollView>
+                    <Grid x:Name="HelpGrid" Padding="10, 0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                    </Grid>
+                </ScrollView>
+            </StackLayout>
+        </ScrollView>
     </ContentPage.Content>
 </ContentPage>
