can now set email and send standard email, realtime validation also implemented on admin options

--- a/ENGIE_App/views/MenuPage.xaml
+++ b/ENGIE_App/views/MenuPage.xaml
@@ -47,12 +47,17 @@
                 ContentLayout="Left, 0"
                 Image="helpicon"
                 BackgroundColor="White"/>
-
-
             <Button
-                Text="Forms (To Be Removed Later)"
+                x:Name="AdminButton"
+                Text="Admin"
+                FontFamily="{StaticResource NormalFont}"
                 Padding="10, 20, 10, 20"
-                Clicked="GoForm"/>
+                Clicked="GoAdmin"
+                ContentLayout="Left, 0"
+                Image="adminiconsmall"
+                BackgroundColor="White"
+                IsVisible="false"
+                IsEnabled="false"/>
             </StackLayout>
         <StackLayout VerticalOptions="End">
                 <Button
