--- a/ENGIE_App/views/LoginPage.xaml
+++ b/ENGIE_App/views/LoginPage.xaml
@@ -9,6 +9,27 @@
     <ContentPage.Content>
         <ScrollView>
             <StackLayout>
+                <!--I'll move this button later -Tom -->
+                <!--<Button Text="Admin" Clicked="Admin_Clicked"/>-->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="3*"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button AutomationId="MenuButton"
+                            HorizontalOptions="CenterAndExpand"
+                            VerticalOptions="CenterAndExpand"
+                            BorderColor="Transparent"
+                            BackgroundColor="Transparent"
+                            Clicked="Admin_Clicked"
+                            Grid.Column="1"/>
+                    <Image Source="adminicon"
+                           InputTransparent="True"
+                           Grid.Column="1"
+                           HeightRequest="10"
+                           />
+                </Grid>
+                
                 <Grid Margin="20,0,20,0" VerticalOptions="CenterAndExpand">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
