--- a/ENGIE_App/views/ScanPage.xaml
+++ b/ENGIE_App/views/ScanPage.xaml
@@ -1,15 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
              x:Class="ENGIE_App.views.ScanPage"
              BackgroundColor="White"
              ControlTemplate="{StaticResource MainPageTemplate}"
              Title="Scan Asset"
              AutomationId="ScanPage">
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Scan Page"
-                   TextColor="Black"/>
-        </StackLayout>
+        <AbsoluteLayout>
+            <zxing:ZXingScannerView IsScanning="True"
+                                    OnScanResult="ZXingScannerView_OnScanResult"/>
+            <Label x:Name="scanResultText"
+                   TextColor="White"/>
+            <Image Source="crosshair"
+                   HeightRequest="150"
+                   WidthRequest="150"
+                   AbsoluteLayout.LayoutFlags="PositionProportional"
+                   AbsoluteLayout.LayoutBounds="0.5, 0.4, 150, 150"/>
+        </AbsoluteLayout>
     </ContentPage.Content>
 </ContentPage>
