Moved liams code to updated version of project

--- a/ENGIE_App/views/FormPage.xaml
+++ b/ENGIE_App/views/FormPage.xaml
@@ -9,6 +9,7 @@
         <StackLayout>
             <Label Text="Form Page"
                    TextColor="Black"/>
+            <Button Text="SUBMIT" Clicked="submit" />
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
